syntax = "proto3";

option csharp_namespace = "Fossa.Licensing";

message SystemLicenseEntitlements {
    bytes SystemId = 1;
    string EnvironmentName = 2;
    int32 MaximumCompanyCount = 3;
    repeated string CountryCodes = 4;
}

message CompanyLicenseEntitlements {
    bytes SystemId = 1;
    int64 CompanyId = 2;
    int32 MaximumBranchCount = 3;
    int32 MaximumEmployeeCount = 4;
    int32 MaximumDepartmentCount = 5;
}
